--- a/site/07-melymerules-2-hatekony-promptolasi-technikak/index.html
+++ b/site/07-melymerules-2-hatekony-promptolasi-technikak/index.html
@@ -826,10 +826,6 @@
 <p>A következő leckében a Megkülönböztetést, a harmadik alapvető <abbr title="A képesség, hogy hatékonyan, eredményesen, etikusan és biztonságosan tudjunk együttműködni az MI-vel">MI Fluencia</abbr> kompetenciát vizsgáljuk meg. Mind ez a Mélymerülés, mind az azt megelőző lecke arra összpontosított, hogyan kommunikáljunk hatékonyan az <abbr title="Mesterséges Intelligencia (Artificial Intelligence) - számítógépes rendszerek, amelyek emberi intelligenciát igénylő feladatokat képesek elvégezni">MI</abbr>-vel és hogyan gyakoroljuk a jó Leírást. A <abbr title="A harmadik D - az MI kimeneteinek és viselkedésének kritikus szemmel történő értékelése">Megkülönböztetés</abbr> az ugyanolyan fontos kihívással foglalkozik: az <abbr title="Mesterséges Intelligencia (Artificial Intelligence) - számítógépes rendszerek, amelyek emberi intelligenciát igénylő feladatokat képesek elvégezni">MI</abbr> által adott válaszok átgondolt értékelésével – a beszélgetés másik felével!</p>
 <h4 id="visszajelzes-a-kurzusrol">Visszajelzés a kurzusról</h4>
 <p>Ahogy haladsz a kurzussal, örömmel vennénk, ha megosztanád velünk, hogyan használod a tanultakat az életedben, a munkádban vagy a tanulmányaidban, valamint bármilyen visszajelzésedet. <a href="https://forms.gle/zURqLbVgdDqGhHZk9">Oszd meg a visszajelzésed itt.</a></p>
-<h4 id="koszonetnyilvanitas-es-licenc">Köszönetnyilvánítás és licenc</h4>
-<p><em>Copyright 2025 Rick Dakan, Joseph Feller, and Anthropic. A CC BY-NC-SA 4.0 licenc alatt kiadva.</em></p>
-<p><em>Ez a kurzus a Dakan és Feller által kidolgozott The <abbr title="Artificial Intelligence - mesterséges intelligencia angolul">AI</abbr> Fluency Framework-en alapul.</em></p>
-<p><em>Részben támogatta az Ír Felsőoktatási Hatóság a Tanítás és Tanulás Fejlesztésének Nemzeti Fórumán keresztül.</em></p>
 <!-- Abbreviations for Hungarian AI Fluency Course -->
 <!-- MI és kapcsolódó alapfogalmak -->
 <!-- Generatív MI technológiai fogalmak -->
@@ -842,6 +838,11 @@
 <!-- Technikai kifejezések -->
 <!-- Konkrét MI rendszerek -->
 <!-- Egyéb fontos fogalmak -->
+<h4 id="koszonetnyilvanitas-es-licenc">Köszönetnyilvánítás és licenc</h4>
+<p>Szerzői jog 2025 Rick Dakan, Joseph Feller és Anthropic.</p>
+<p>Ez a kurzus a Creative Commons Nevezd meg! – Nemkereskedelmi – Így add tovább! 4.0 Nemzetközi (CC BY-NC-SA 4.0) licenc feltételei szerint használható fel.</p>
+<p>A kurzus alapját Dakan és Feller "The <abbr title="Artificial Intelligence - mesterséges intelligencia angolul">AI</abbr> Fluency Framework" című műve képezi.</p>
+<p>A tananyag magyar változatát Rácz László és a NewPush Europe Kft. készítette.</p>
 
 
 
