--- a/site/01-bevezetes-az-mi-fluenciaba/index.html
+++ b/site/01-bevezetes-az-mi-fluenciaba/index.html
@@ -929,10 +929,6 @@
 <p>Profi tipp: ezt a dokumentumot és más kurzusanyagokat is megoszthatod a <abbr title="Az Anthropic által fejlesztett MI asszisztens, amelyet ebben a kurzusban példaként használunk">Claude</abbr>-dal, hogy segítséget kérj konkrét koncepciók felfedezéséhez.</p>
 <h4 id="mi-kovetkezik">Mi következik?</h4>
 <p>A következő leckében azt vizsgáljuk meg, miért számít az <abbr title="A képesség, hogy hatékonyan, eredményesen, etikusan és biztonságosan tudjunk együttműködni az MI-vel">MI Fluencia</abbr> a mai gyorsan fejlődő technológiai környezetben. Bemutatjuk az <abbr title="Mesterséges Intelligencia (Artificial Intelligence) - számítógépes rendszerek, amelyek emberi intelligenciát igénylő feladatokat képesek elvégezni">MI</abbr>-vel való együttműködés három kulcsfontosságú módját (<abbr title="Az MI konkrét feladatokat hajt végre az utasításaid alapján">Automatizálás</abbr>, <abbr title="Te és az MI kreatív gondolkodási és feladat-végrehajtási partnerként működtök együtt">Kiterjesztés</abbr> és <abbr title="Úgy konfigurálod az MI-t, hogy önállóan dolgozzon a nevedben, meghatározva annak tudását és viselkedési mintáit">Ügynökség</abbr>), valamint az <abbr title="A képesség, hogy hatékonyan, eredményesen, etikusan és biztonságosan tudjunk együttműködni az MI-vel">MI Fluencia</abbr> Keretrendszer alapkompetenciáit: a <abbr title="Az első D - megfontoltan dönteni arról, milyen munkát végezzünk MI-vel, és mit végezzünk el magunk">Delegálás</abbr>, <abbr title="A második D - világos kommunikáció az MI rendszerekkel, hatékony promptok és instrukciódk készítése">Leírás</abbr>, <abbr title="A harmadik D - az MI kimeneteinek és viselkedésének kritikus szemmel történő értékelése">Megkülönböztetés</abbr> és <abbr title="A negyedik D - annak biztosítása, hogy felelősségteljesen lépjünk interakcióba az MI-vel">Gondosság</abbr> "<abbr title="A négy alapkompetencia (Delegálás, Leírás, Megkülönböztetés, Gondosság) - az MI Fluencia Keretrendszer alappillérei">4D</abbr>"-jét.</p>
-<h4 id="koszonetnyilvanitas-es-licenc">Köszönetnyilvánítás és licenc</h4>
-<p><em>Copyright 2025 Rick Dakan, Joseph Feller, and Anthropic. A CC BY-NC-SA 4.0 licenc alatt kiadva.</em></p>
-<p><em>Ez a kurzus a Dakan és Feller által kidolgozott The <abbr title="Artificial Intelligence - mesterséges intelligencia angolul">AI</abbr> Fluency Framework-en alapul.</em></p>
-<p><em>Részben támogatta az Ír Felsőoktatási Hatóság a Tanítás és Tanulás Fejlesztésének Nemzeti Fórumán keresztül.</em></p>
 <!-- Abbreviations for Hungarian AI Fluency Course -->
 <!-- MI és kapcsolódó alapfogalmak -->
 <!-- Generatív MI technológiai fogalmak -->
@@ -945,6 +941,11 @@
 <!-- Technikai kifejezések -->
 <!-- Konkrét MI rendszerek -->
 <!-- Egyéb fontos fogalmak -->
+<h4 id="koszonetnyilvanitas-es-licenc">Köszönetnyilvánítás és licenc</h4>
+<p>Szerzői jog 2025 Rick Dakan, Joseph Feller és Anthropic.</p>
+<p>Ez a kurzus a Creative Commons Nevezd meg! – Nemkereskedelmi – Így add tovább! 4.0 Nemzetközi (CC BY-NC-SA 4.0) licenc feltételei szerint használható fel.</p>
+<p>A kurzus alapját Dakan és Feller "The <abbr title="Artificial Intelligence - mesterséges intelligencia angolul">AI</abbr> Fluency Framework" című műve képezi.</p>
+<p>A tananyag magyar változatát Rácz László és a NewPush Europe Kft. készítette.</p>
 
 
 
