--- a/site/09-a-leiras-megkulonboztetes-hurok/index.html
+++ b/site/09-a-leiras-megkulonboztetes-hurok/index.html
@@ -835,10 +835,6 @@
 <p>A következő leckében az <abbr title="A képesség, hogy hatékonyan, eredményesen, etikusan és biztonságosan tudjunk együttműködni az MI-vel">MI Fluencia</abbr> Keretrendszer utolsó kompetenciáját, a Gondosságot vizsgáljuk meg. Míg a <abbr title="Az első D - megfontoltan dönteni arról, milyen munkát végezzünk MI-vel, és mit végezzünk el magunk">Delegálás</abbr>, a <abbr title="A második D - világos kommunikáció az MI rendszerekkel, hatékony promptok és instrukciódk készítése">Leírás</abbr> és a <abbr title="A harmadik D - az MI kimeneteinek és viselkedésének kritikus szemmel történő értékelése">Megkülönböztetés</abbr> elsősorban a hatékonyságra és az eredményességre összpontosít, a <abbr title="A negyedik D - annak biztosítása, hogy felelősségteljesen lépjünk interakcióba az MI-vel">Gondosság</abbr> az <abbr title="Mesterséges Intelligencia (Artificial Intelligence) - számítógépes rendszerek, amelyek emberi intelligenciát igénylő feladatokat képesek elvégezni">MI</abbr>-vel való munka etikai és biztonsági aspektusaival foglalkozik. Megtanulod, hogyan biztosítsd, hogy az <abbr title="Mesterséges Intelligencia (Artificial Intelligence) - számítógépes rendszerek, amelyek emberi intelligenciát igénylő feladatokat képesek elvégezni">MI</abbr> együttműködéseid felelősségteljesek, átláthatóak és elszámoltathatóak legyenek.</p>
 <h4 id="visszajelzes-a-kurzusrol">Visszajelzés a kurzusról</h4>
 <p>Ahogy haladsz a kurzussal, örömmel vennénk, ha megosztanád velünk, hogyan használod a tanultakat az életedben, a munkádban vagy a tanulmányaidban, valamint bármilyen visszajelzésedet. <a href="https://forms.gle/zURqLbVgdDqGhHZk9">Oszd meg a visszajelzésed itt.</a></p>
-<h4 id="koszonetnyilvanitas-es-licenc">Köszönetnyilvánítás és licenc</h4>
-<p><em>Copyright 2025 Rick Dakan, Joseph Feller, and Anthropic. A CC BY-NC-SA 4.0 licenc alatt kiadva.</em></p>
-<p><em>Ez a kurzus a Dakan és Feller által kidolgozott The <abbr title="Artificial Intelligence - mesterséges intelligencia angolul">AI</abbr> Fluency Framework-en alapul.</em></p>
-<p><em>Részben támogatta az Ír Felsőoktatási Hatóság a Tanítás és Tanulás Fejlesztésének Nemzeti Fórumán keresztül.</em></p>
 <!-- Abbreviations for Hungarian AI Fluency Course -->
 <!-- MI és kapcsolódó alapfogalmak -->
 <!-- Generatív MI technológiai fogalmak -->
@@ -851,6 +847,11 @@
 <!-- Technikai kifejezések -->
 <!-- Konkrét MI rendszerek -->
 <!-- Egyéb fontos fogalmak -->
+<h4 id="koszonetnyilvanitas-es-licenc">Köszönetnyilvánítás és licenc</h4>
+<p>Szerzői jog 2025 Rick Dakan, Joseph Feller és Anthropic.</p>
+<p>Ez a kurzus a Creative Commons Nevezd meg! – Nemkereskedelmi – Így add tovább! 4.0 Nemzetközi (CC BY-NC-SA 4.0) licenc feltételei szerint használható fel.</p>
+<p>A kurzus alapját Dakan és Feller "The <abbr title="Artificial Intelligence - mesterséges intelligencia angolul">AI</abbr> Fluency Framework" című műve képezi.</p>
+<p>A tananyag magyar változatát Rácz László és a NewPush Europe Kft. készítette.</p>
 
 
 
