--- a/site/11-osszegzes-es-tanusitvany/index.html
+++ b/site/11-osszegzes-es-tanusitvany/index.html
@@ -867,10 +867,6 @@
 <h3 id="zarovizsga">Záróvizsga</h3>
 <p>Tedd le ezt a záróvizsgát, hogy teszteld az <abbr title="Mesterséges Intelligencia (Artificial Intelligence) - számítógépes rendszerek, amelyek emberi intelligenciát igénylő feladatokat képesek elvégezni">MI</abbr> Fluenciádat és megkapd a hivatalos tanúsítványodat.</p>
 <p><a href="https://forms.gle/5w2oKW2nzsK5Macf9">Vizsga letétele</a></p>
-<h4 id="koszonetnyilvanitas-es-licenc">Köszönetnyilvánítás és licenc</h4>
-<p><em>Copyright 2025 Rick Dakan, Joseph Feller, and Anthropic. A CC BY-NC-SA 4.0 licenc alatt kiadva.</em></p>
-<p><em>Ez a kurzus a Dakan és Feller által kidolgozott The <abbr title="Artificial Intelligence - mesterséges intelligencia angolul">AI</abbr> Fluency Framework-en alapul.</em></p>
-<p><em>Részben támogatta az Ír Felsőoktatási Hatóság a Tanítás és Tanulás Fejlesztésének Nemzeti Fórumán keresztül.</em></p>
 <!-- Abbreviations for Hungarian AI Fluency Course -->
 <!-- MI és kapcsolódó alapfogalmak -->
 <!-- Generatív MI technológiai fogalmak -->
@@ -883,6 +879,11 @@
 <!-- Technikai kifejezések -->
 <!-- Konkrét MI rendszerek -->
 <!-- Egyéb fontos fogalmak -->
+<h4 id="koszonetnyilvanitas-es-licenc">Köszönetnyilvánítás és licenc</h4>
+<p>Szerzői jog 2025 Rick Dakan, Joseph Feller és Anthropic.</p>
+<p>Ez a kurzus a Creative Commons Nevezd meg! – Nemkereskedelmi – Így add tovább! 4.0 Nemzetközi (CC BY-NC-SA 4.0) licenc feltételei szerint használható fel.</p>
+<p>A kurzus alapját Dakan és Feller "The <abbr title="Artificial Intelligence - mesterséges intelligencia angolul">AI</abbr> Fluency Framework" című műve képezi.</p>
+<p>A tananyag magyar változatát Rácz László és a NewPush Europe Kft. készítette.</p>
 
 
 
