style: update footer text formatting

--- a/course/hu/custom_theme/main.html
+++ b/course/hu/custom_theme/main.html
@@ -117,8 +117,8 @@
         <div class="custom-footer__section">
           <h4>NewPush Labs</h4>
           <p>Innovatív megoldások a digitális transzformációhoz.</p>
-          <p><a href="mailto:info@newpush.com">info@newpush.com</a></p>
-          <p>Készítette: Rácz László és a NewPush Europe Kft.</p>
+          <p><i>Készítette Rácz László és a <a href="https://newpush.com">NewPush Europe Kft.</a></i></p>
+
         </div>
         
         <div class="custom-footer__section">
