feat(analytics): add Google Tag Manager integration

--- a/course/hu/custom_theme/main.html
+++ b/course/hu/custom_theme/main.html
@@ -145,3 +145,11 @@
     </div>
   </div>
 {% endblock %}
+
+{% block scripts %}
+  {{ super() }}
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TNGVKCZM"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+{% endblock %}
